# poker-ai

./: .flake8  .gitignore  .pre-commit-config.yaml  GAME_STATE_DETECTION_SUMMARY.md  README.md  calibrate_button_detection.py  example_llm_usage.py  pyproject.toml  requirements.txt  test_ai_advisor.py  test_high_priority_features.py  test_setup.py  test_turn_detection.py  test_vision.py
config/: table_regions.json
data/: opponents.db
data/hands/: hand_hand_1751852248.json  hand_test_hand_001.json
examples/: gui_example.py
src/: __init__.py  main_llm_analyzer.py  main_poker_assistant.py
src/ai/: __init__.py  poker_advisor.py
src/analysis/: hand_tracker.py
src/core/: __init__.py  poker_engine.py
src/profiling/: database.py  database_schema.sql  opponent_profile.py
src/vision/: __init__.py  card_recognizer.py  card_template_generator.py  enhanced_card_recognizer.py  game_state_detector.py  gentle_template_preprocessor.py  number_reader.py  ocr_detector.py  position_detector.py  screen_capture.py  table_analyzer.py  table_detector.py  template_preprocessor.py  window_detector.py
